# cs858-wiki

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.claude/commands/: generate-paper-summary.md  sync-paper-table.md
docs/: CS858-F26-papers-stripped.xlsx  log.md  writing-style.md
docs/ops/: generate-paper-summary.md  lint.md  query.md  replace-paper.md
scripts/: build-paper-table.py  check-links.py  fetch-arxiv.py  read-pdf.py
wiki/: README.md  _index.md  log.md
wiki-f26/: README.md  under-construction.md
wiki-f26/concepts/: README.md  activation-steering.md  adversarial-examples.md  adversarial-threat-model.md  adversarial-training.md  automated-program-repair.md  backdoor-attacks.md  ciphertext-packing.md  code-language-models.md  contrastive-prompt-pairs.md  convolutional-neural-network.md  cryptographic-commitment.md  data-poisoning.md  decoding-strategies.md  dense-retrieval.md  differential-privacy.md  direct-preference-optimization.md  empirical-risk-minimization.md  fgsm.md  gaussian-mechanism.md  gradient-clipping.md  gradient-masking.md  group-fairness.md  hardware-virtualization.md  homomorphic-encryption.md  instruction-tuning.md  jailbreak.md  kl-divergence.md  knowledge-distillation.md  language-model-pretraining.md  likelihood-ratio-test.md  linear-probing.md  linear-representation-hypothesis.md  llm-tool-use.md  llm-watermarking.md  lp-norms.md  machine-unlearning.md  mechanistic-interpretability.md  membership-inference.md  memorization.md  (+31 more)
wiki-f26/papers/: README.md  abadi-2016-dp-sgd.md  bao-2025-dp-zo.md  carlini-2021-extracting-training-data.md  carlini-2022-lira.md  chantasantitam-2026-palm.md  duddu-2024-unintended-interactions.md  elatali-2024-blime.md  greshake-2023-indirect-prompt-injection.md  jain-2024-safety-finetuning.md  jang-2022-knowledge-unlearning.md  kirchenbauer-2023-llm-watermark.md  madry-2018-pgd.md  moon-2025-asgard.md  orekondy-2019-knockoff-nets.md  pearce-2023-vulnerability-repair.md  qi-2024-shallow-safety-alignment.md  qu-2025-zkgpt.md  szyller-2019-dawn.md  tang-2024-modelguard.md  wang-2019-neural-cleanse.md  wei-2023-jailbroken.md  zhang-2024-tee-shielded.md  zhang-2025-nexus.md  zou-2023-representation-engineering.md  zou-2024-poisonedrag.md
wiki/concepts/: README.md  _index.md  activation-steering.md  adversarial-examples.md  adversarial-threat-model.md  adversarial-training.md  algorithmic-fairness.md  attribute-inference.md  backdoor-attacks.md  ciphertext-packing.md  code-language-models.md  contrastive-prompt-pairs.md  convolutional-neural-network.md  cryptographic-commitment.md  data-poisoning.md  data-reconstruction.md  decoding-strategies.md  dense-retrieval.md  differential-privacy.md  distributed-representations.md  empirical-risk-minimization.md  entropy.md  feature-attribution.md  gaussian-mechanism.md  gradient-clipping.md  gradient-masking.md  hardware-virtualization.md  homomorphic-encryption.md  instruction-tuning.md  jailbreak.md  kl-divergence.md  knowledge-distillation.md  language-model-pretraining.md  likelihood-ratio-test.md  linear-probing.md  linear-representation-hypothesis.md  llm-tool-use.md  lp-norms.md  mechanistic-interpretability.md  membership-inference.md  (+33 more)
wiki/papers/: README.md  _index.md  abadi-2016-dp-sgd.md  carlini-2021-extracting-training-data.md  carlini-2022-lira.md  chantasantitam-2026-palm.md  madry-2018-pgd.md  (+13 more)
