[project]
name = "cs858-wiki"
version = "0.1.0"
description = "CS858 reading-companion wiki tooling: PDF reading and link checking"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pdfplumber>=0.11.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "basedpyright>=1.1",
    "nox>=2024.10",
    "pre-commit>=3.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "UP", "B", "C4", "SIM", "TCH", "ANN", "S", "PT", "RUF", "D"
]
ignore = [
    "ANN401",
    "E501",
    "D105",
    "D107",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S", "D"]
"__init__.py" = ["F401"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = "none"
reportPrivateImportUsage = "none"
exclude = [".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
    "--timeout=300",
    "-m", "not integration and not slow",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: tests that take more than a few seconds",
    "integration: tests that exercise multiple real components together",
]

[tool.coverage.run]
branch = true
source = ["scripts"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]
